PCC-57: Custom permission and entity udpates.

--- a/pcx_connect.routing.yml
+++ b/pcx_connect.routing.yml
@@ -1,13 +1,13 @@
 entity.pcc_site.collection:
-  path: '/admin/config/system/pcx_connect'
+  path: '/admin/structure/pcc_sites'
   defaults:
     _entity_list: 'pcc_site'
-    _title: 'PCC Site configuration'
+    _title: 'PCC Sites'
   requirements:
     _permission: 'administer site configuration'
 
 entity.pcc_site.add_form:
-  path: '/admin/config/system/pcx_connect/add'
+  path: '/admin/structure/pcc_sites/add'
   defaults:
     _entity_form: 'pcc_site.add'
     _title: 'Add PCC Site'
@@ -15,7 +15,7 @@ entity.pcc_site.add_form:
     _permission: 'administer site configuration'
 
 entity.pcc_site.edit_form:
-  path: '/admin/config/system/pcx_connect/{pcc_site}'
+  path: '/admin/structure/pcc_sites/{pcc_site}'
   defaults:
     _entity_form: 'pcc_site.edit'
     _title: 'Edit PCC Site'
@@ -23,7 +23,7 @@ entity.pcc_site.edit_form:
     _permission: 'administer site configuration'
 
 entity.pcc_site.delete_form:
-  path: '/admin/config/system/pcx_connect/{pcc_site}/delete'
+  path: '/admin/structure/pcc_sites/{pcc_site}/delete'
   defaults:
     _entity_form: 'pcc_site.delete'
     _title: 'Delete PCC Site'
