--- a/pcx_connect.links.menu.yml
+++ b/pcx_connect.links.menu.yml
@@ -1,5 +1,5 @@
 entity.pcc_site.collection:
-  title: 'PCC Site Settings'
-  parent: system.admin_config_system
+  title: 'PCC Sites'
+  parent: system.admin_structure
   description: 'Configure PCC Sites'
   route_name: entity.pcc_site.collection
