--- a/pcx_connect.routing.yml
+++ b/pcx_connect.routing.yml
@@ -36,3 +36,17 @@ pcx_connect.api_status:
     _controller: '\Drupal\pcx_connect\Controller\ApiStatusController::emptyResponse'
   requirements:
     _access: 'TRUE'
+
+pcx_connect.get_site:
+  path: '/api/pantheoncloud/debug/get-site'
+  defaults:
+    _controller: '\Drupal\pcx_connect\Controller\DebugSiteController::getSite'
+  requirements:
+    _permission: 'administer pcc configurations'
+
+pcx_connect.get_all_articles:
+  path: '/api/pantheoncloud/debug/get-all-articles-demo'
+  defaults:
+    _controller: '\Drupal\pcx_connect\Controller\DebugSiteController::getAllArticles'
+  requirements:
+    _permission: 'administer pcc configurations'
