PCC-61: Rename Content to Articles API.

--- a/pcx_connect.services.yml
+++ b/pcx_connect.services.yml
@@ -2,6 +2,6 @@ services:
   pcx_connect.pcc_api_client:
     class: Drupal\pcx_connect\Service\PccApiClient
     arguments: ['@logger.factory']
-  pcx_connect.pcc_content_api:
-    class: Drupal\pcx_connect\Service\PccContentApi
+  pcx_connect.pcc_articles_api:
+    class: Drupal\pcx_connect\Service\PccArticlesApi
     arguments: ['@pcx_connect.pcc_api_client', '@logger.factory']
