--- a/pcx_connect.info.yml
+++ b/pcx_connect.info.yml
@@ -3,3 +3,5 @@ description: 'Drupal Module for PCC Integration.'
 package: 'PCC'
 core_version_requirement: ^9.3 || ^10
 type: module
+dependencies:
+  - drupal:views
