PCC-93: Added content search in blog views.

--- a/config/optional/views.view.blogs.yml
+++ b/config/optional/views.view.blogs.yml
@@ -684,7 +684,89 @@ display:
           exposed: false
           granularity: second
       arguments: {  }
-      filters: {  }
+      filters:
+        tags:
+          id: tags
+          table: pcc_drupal
+          field: tags
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: string
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: tags_op
+            label: Tags
+            description: ''
+            use_operator: false
+            operator: tags_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: tags
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              qa: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+        content:
+          id: content
+          table: pcc_drupal
+          field: content
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: string
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: content_op
+            label: Search
+            description: ''
+            use_operator: false
+            operator: content_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: content
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              qa: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       filter_groups:
         operator: AND
         groups:
@@ -725,6 +807,7 @@ display:
       max-age: -1
       contexts:
         - 'languages:language_interface'
+        - url
         - url.query_args
         - user.permissions
       tags: {  }
