--- a/config/optional/views.view.pantheon_cloud_api.yml
+++ b/config/optional/views.view.pantheon_cloud_api.yml
@@ -67,58 +67,6 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-        previewActiveUntil:
-          id: previewActiveUntil
-          table: pcc_drupal
-          field: previewActiveUntil
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: date
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          date_format: custom
-          custom_date_format: 'Y-m-d H:i:s'
-          timezone: Asia/Kolkata
         title:
           id: title
           table: pcc_drupal
@@ -131,7 +79,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"livew-preview-bar\">\r\n<div class=\"item\"><a href=\"https://docs.google.com/document/d/{{ id }}/edit\" targte=\"_blank\">{{ title }} </a></div>\r\n<div class=\"item\">Page preview: <span class=\"preview-status\">Off</span></div>\r\n</div>"
+            text: "<div class=\"livew-preview-bar\">\r\n<div class=\"item\"><a href=\"https://docs.google.com/document/d/{{ id }}/edit\" target=\"_blank\">{{ title }} </a></div>\r\n<div class=\"item\">Page preview: <span class=\"preview-status\">Off</span></div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
