Update composer.json to point at pantheon-systems/pcc-php-sdk

--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,20 @@
   "type": "drupal-module",
   "license": "GPL-2.0-or-later",
   "homepage": "https://drupal.org/project/pcx_connect",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:pantheon-systems/pcc-php-sdk.git"
+    }
+  ],
   "extra": {
     "drush": {
       "services": {
         "drush.services.yml": "^9 || ^10 || ^11"
       }
     }
+  },
+  "require": {
+    "pantheon-systems/pcc-php-sdk": "^0.0.1"
   }
 }
