--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
   name: pantheon content cloud drupal module
   description: An add-on module for pantheon site development with Drupal
   annotations:
-    backstage.io/techdocs-ref: dir:docs/
+    pantheon.io/service-catalog/subdir: /
     github.com/project-slug: @pantheon-systems/pcc-drupal-module
     github.com/team-slug: @pantheon-systems/pcc
 tags:
